@@ -4,7 +4,9 @@
 	* Added cg_upnp_device_addicon().
 	* Added CGUpnpDevice:setDeviceType().
 	* Added cg_http_request_postchunkeddata() and cg_http_request_postchunkedsize().
-
+	* Added cg_upnp_device_isrunning().
+	* Changed cg_upnp_device_stop() not to send a byebye message when the device isn't running.
+	
 2009-04-23  Satoshi Konno <skonno@cybergarage.org>
 	* Added DLNA-CP-version in the USER-AGENT HTTP header value as default.
 
